force-app/main/default/objects/SccCountryRule__mdt/SccCountryRule__mdt.object-meta.xml
<CustomObject>
    <description>可由管理员维护的国家名称、别名与 ISO2 国家码。</description>
    <label>客户编码国家规则</label>
</CustomObject>