force-app/main/default/objects/SccCountryRule__mdt/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <description>多个别名使用英文分号分隔。</description>
    <label>国家别名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>