force-app/main/default/objects/SccCountryRule__mdt/fields/CountryName__c.field-meta.xml
<CustomField>
    <fullName>CountryName__c</fullName>
    <label>国家标准名称</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>