force-app/main/default/objects/SccCountryRule__mdt/fields/Iso2Code__c.field-meta.xml
<CustomField>
    <fullName>Iso2Code__c</fullName>
    <label>ISO2 国家码</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>